[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacherService"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-rt = "1.1.1"
serde = {version = "1.0.14",features = ["derive"]}
chrono = {version = "0.4.38",features = ["serde"]}
[[bin]]
name = "server1"
[[bin]]
name = "teacherService"

